# abstractrl

./: .gitignore  Makefile  README.md  launch.sh  main.py  pyproject.toml
scripts/: reclaim_disk.sh
src/AbstractBeam/: README.md  pytest.ini  run_tsp_gpu.sh
src/AbstractBeam/crossbeam/: __init__.py
src/AbstractBeam/crossbeam/dsl/: domains.py
src/AbstractBeam/crossbeam/experiment/: auto_gcp_research.py  auto_gcp_scale_up.py  auto_gcp_scale_up_v2.py  gcp_hard_benchmark.py  gcp_hard_benchmark_v2.py  gcp_run8h_perfect.py  gcp_trace_abstractbeam.py  gcp_trace_abstractbeam_v2.py  launch_gcp_8h_perfect.sh  launch_overnight_compare_v2.sh  long_gcp_scale8h.py  run_crossbeam.py  run_crossbeam_test.py  run_small_to_large_ablation_v2.py  run_small_to_large_ladder_v2.py  summarize_overnight_v2.py  train_eval.py
src/AbstractBeam/crossbeam/property_signatures/: property_signatures.py
src/AbstractBeam/crossbeam/tests/: test_gpu_optional.py
src/AbstractBeam/neurips/: .gitignore  AUTORESEARCH_README.md
src/AbstractBeam/neurips/mm_tensor_gpu/: MM_RESEARCH_SYNTHESIS.json  analyze_mm_research.py  autoresearch_mm_loop.py  combined_tensor_baselines.json  evolve_tensor_cp.py  launch_autoresearch_10h.sh  run_mm_research.py  tensor_cp_baseline.py  tensor_cp_report.json  tensor_evolve_report.json
src/AbstractBeam/neurips/nightly/: launch_night_all.sh  run_sort_config_search.py
src/AbstractBeam/neurips/sort2/: results_sort2.json
tests/: conftest.py  test_compressed_sensing_amp.py  test_env.py  test_nonsymmetric_amp.py  test_principal_minor_amp.py  test_synthetic_corruptions.py
(+730 files in other folders)
